--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<link rel="stylesheet" href="http://example.org//css/index.css" />
-<link rel="stylesheet" href="http://example.org//css/navbar.css" />
-<link rel="stylesheet" href="http://example.org//css/navbar.css" />
+<link rel="stylesheet" href="https://dronepilot.one//css/index.css" />
+<link rel="stylesheet" href="https://dronepilot.one//css/navbar.css" />
+<link rel="stylesheet" href="https://dronepilot.one//css/navbar.css" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
@@ -19,11 +19,11 @@
         nav.classList.toggle('onscroll', window.scrollY > 0)
     })
 </script>
-    <title>My New Hugo Site</title>
+    <title>Number #1 dronepilot</title>
   </head>
   <body>
       <nav class="pl-4 md:pl-24">
-  <a href="http://example.org/" class="logo">My New Hugo Site</a>
+  <a href="https://dronepilot.one/" class="logo">Number #1 dronepilot</a>
   <ul class="hidden md:flex">
     
   </ul>
@@ -37,25 +37,25 @@
   >
     <div
       class="wave wave1"
-      style="background-image: url('http://example.org//img/wave.png');"
+      style="background-image: url('https://dronepilot.one//img/wave.png');"
     ></div>
     <div
       class="wave wave2"
-      style="background-image: url('http://example.org//img/wave.png');"
+      style="background-image: url('https://dronepilot.one//img/wave.png');"
     ></div>
     <div
       class="wave wave3"
-      style="background-image: url('http://example.org//img/wave.png');"
+      style="background-image: url('https://dronepilot.one//img/wave.png');"
     ></div>
     <div
       class="wave wave4"
-      style="background-image: url('http://example.org//img/wave.png');"
+      style="background-image: url('https://dronepilot.one//img/wave.png');"
     ></div>
     <div class="centerAll">
       <div class="title text-6xl font-bold text-center">
         Simple-intro
       </div>
-      <div class="text text-xl text-center">Just simple intro theme for hugo</div>
+      <div class="text text-xl text-center">dronepilot.one</div>
     </div>
   </div>
   
@@ -179,7 +179,7 @@
 </div>
 
       <footer class="text-center mt-8 py-2 bg-gray-900 text-white">
-  <div>&copy; 2021 John Doe</div>
+  <div>&copy; 2021 dronepilot.one</div>
 </footer>
 
   </body>
