--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     ></div>
     <div class="centerAll">
       <div class="title text-6xl font-bold text-center">
-        Simple-intro
+        dronepilot.one
       </div>
       <div class="text text-xl text-center">dronepilot.one</div>
     </div>
