--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="title text-6xl font-bold text-center">
         dronepilot.one
       </div>
-      <div class="text text-xl text-center">dronepilot.one</div>
+      <div class="text text-xl text-center">Edit config.toml/params</div>
     </div>
   </div>
   
