--- a/index.html
+++ b/index.html
@@ -68,17 +68,20 @@
 
         <div class="flex mt-3 gap-3 text-xl">
           
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fas fa-envelope"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
       <div class="mt-4 md:mt-0 md:ml-4">
         <div class="text-2xl font-bold">
-          You can put
-          text in data/home/about.toml/title
+          Hello, World!
         </div>
         <div class="text-lg mt-3">
           <div>
-            You can put text in
-            data/home/about.toml/text
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br />Voluptatibus quia, nulla! Maiores et perferendis eaque,<br />exercitationem praesentium nihil.<br />
+            
           </div>
         </div>
       </div>
