--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   <a href="https://dronepilot.one/" class="logo">Number #1 dronepilot</a>
   <ul class="hidden md:flex">
     
+    <li>
+      <a href="#about">About</a>
+    </li>
+    
   </ul>
 </nav>
 <section class="banner"></section>
