--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       <a href="#about">About</a>
     </li>
     
+    <li>
+      <a href="#skills">Contact</a>
+    </li>
+    
   </ul>
 </nav>
 <section class="banner"></section>
