--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <a href="#"><i class="fab fa-github"></i></a>
           <a href="#"><i class="fab fa-linkedin"></i></a>
           <a href="#"><i class="fas fa-envelope"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/dronepilot.one/"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
       <div class="mt-4 md:mt-0 md:ml-4">
