--- a/index.html
+++ b/index.html
@@ -76,19 +76,17 @@
 
         <div class="flex mt-3 gap-3 text-xl">
           
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fas fa-envelope"></i></a>
           <a href="https://www.instagram.com/dronepilot.one/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.youtube.com/channel/UCGw4c0Z-ysfdJgj8KQtADYQ"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
       <div class="mt-4 md:mt-0 md:ml-4">
         <div class="text-2xl font-bold">
-          Hello, World!
+          Welcome on our website!
         </div>
         <div class="text-lg mt-3">
           <div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br />Voluptatibus quia, nulla! Maiores et perferendis eaque,<br />exercitationem praesentium nihil.<br />
+            Shooting images from the sky! Please checkout our social media accounts on<br />Instagram and YouTube!<br />
             
           </div>
         </div>
