--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="font-bold text-xl mb-2 py-2 px-6 bg-gray-500">
               <div class="flex">
                 <img
-                  src=""
+                  src="images/devicon-csharp-original.svg"
                   width="50px"
                   class="bg-gray-300 py-1 px-1 rounded-full"
                 />
@@ -130,7 +130,7 @@
             <div class="font-bold text-xl mb-2 py-2 px-6 bg-gray-500">
               <div class="flex">
                 <img
-                  src=""
+                  src="images/devicon-csharp-original.svg"
                   width="50px"
                   class="bg-gray-300 py-1 px-1 rounded-full"
                 />
@@ -150,7 +150,7 @@
             <div class="font-bold text-xl mb-2 py-2 px-6 bg-gray-500">
               <div class="flex">
                 <img
-                  src=""
+                  src="images/devicon-csharp-original.svg"
                   width="50px"
                   class="bg-gray-300 py-1 px-1 rounded-full"
                 />
