--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Edit</div>
             <p class="text-gray-700 text-base">
-                      Create shot films.
+                      Create short films.
     
             </p>
           </div>
