--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div>
   <div
     id="mainBG"
-    style="background-image: url('/images/rotterdam.jpeg');"
+    style="background-image: url('/images/maas.jpeg');"
   >
     <div
       class="wave wave1"
