--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="title text-6xl font-bold text-center">
         dronepilot.one
       </div>
-      <div class="text text-xl text-center">Based in the Netherlands</div>
+      <div class="text text-xl text-center">the Netherlands</div>
     </div>
   </div>
   
