--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
         <div class="flex mt-3 gap-3 text-xl">
           
-          <a href="https://www.instagram.com/dronepilot.one/"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.youtube.com/channel/UCGw4c0Z-ysfdJgj8KQtADYQ"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.instagram.com/dronepilot.one/"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.youtube.com/channel/UCGw4c0Z-ysfdJgj8KQtADYQ"><i class="fab fa-youtube fa-2x"></i></a>
         </div>
       </div>
       <div class="mt-4 md:mt-0 md:ml-4">
